--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:theme="@style/Theme.Blogsystemandroid"
         tools:targetApi="31">
         <activity
+            android:name=".activity.FeedbackActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.PersonalInfoActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
