feat: 音频播放页-20%，接入androidx.palette

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
         </provider>
 
         <activity
+            android:name=".activity.AudioPlayerActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.ImagePreviewActivity"
             android:exported="false" />
         <activity
