feat: 音频播放页-60%，隐藏音频播放页而不退出

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity
             android:name=".activity.AudioPlayerActivity"
             android:exported="false"
+            android:launchMode="singleInstance"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.ImagePreviewActivity"
