--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.7.0"
-composeBom = "2024.05.00"
+composeBom = "2025.03.01"
 appcompat = "1.6.1"
 material = "1.10.0"
 activity = "1.8.0"
@@ -17,7 +17,6 @@ okhttp3 = "4.12.0"
 coil = "2.6.0"
 room = "2.6.0"
 ksp = "1.9.20-1.0.14"
-androidxMaterial = "1.6.7"
 jsoup = "1.17.2"
 zoomable = "1.6.1"
 datastorePreferences = "1.1.1"
@@ -40,9 +39,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "androidxMaterial" }
+androidx-material = { group = "androidx.compose.material", name = "material"}
 #implementation "androidx.compose.material:material-icons-extended:$compose_version"
-androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+#androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
